# ai-agents-in-pure-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
tutorial/1-building-blocks/: 1-basic-calls.py  2-structured-output.py  3-tools-use.py  4-retrieval.py
tutorial/2-workflow-patterns/: 1-prompt-chaining.py  2-routing.py  3-parallelization.py  4-orchestrator.py
